[package]
name = "example"
version = "0.1.0"
edition = "2018"


[lib]
name = "example"
path = "src/lib.rs"

[[bin]]
name = "author"
path = "bin/author.rs"

[[bin]]
name = "subscriber"
path = "bin/subscriber.rs"

[dependencies]
anyhow = { version = "1.0", default-features = false }
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "develop" }
tokio = { version = "^0.2", features = ["full"] }
base64 = "^0.12"
rand = "0.7.3"